nginx_vs_caddy_vs_traefik/traefik/k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-demo-service
spec:
  selector:
    app: traefik-demo
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
