nginx_vs_caddy_vs_traefik/traefik/k8s/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-demo-route
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: traefik-demo-service
          port: 80
